; ModuleID = '/home/carl/AnghaBench/esp-idf/components/openssl/library/extr_ssl_pkey.c_SSL_use_PrivateKey_ASN1.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/openssl/library/extr_ssl_pkey.c_SSL_use_PrivateKey_ASN1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSL_PKEY_ERROR_LEVEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"d2i_PrivateKey() return NULL\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"SSL_use_PrivateKey() return %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SSL_use_PrivateKey_ASN1(i32 %0, i32* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i64, i64* %9, align 8
  %13 = call i32* @d2i_PrivateKey(i32 0, i32* null, i8** %8, i64 %12)
  store i32* %13, i32** %11, align 8
  %14 = load i32*, i32** %11, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %4
  %17 = load i32, i32* @SSL_PKEY_ERROR_LEVEL, align 4
  %18 = call i32 (i32, i8*, ...) @SSL_DEBUG(i32 %17, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %33

19:                                               ; preds = %4
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = call i32 @SSL_use_PrivateKey(i32* %20, i32* %21)
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %19
  %26 = load i32, i32* @SSL_PKEY_ERROR_LEVEL, align 4
  %27 = load i32, i32* %10, align 4
  %28 = call i32 (i32, i8*, ...) @SSL_DEBUG(i32 %26, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32 %27)
  br label %30

29:                                               ; preds = %19
  store i32 1, i32* %5, align 4
  br label %34

30:                                               ; preds = %25
  %31 = load i32*, i32** %11, align 8
  %32 = call i32 @EVP_PKEY_free(i32* %31)
  br label %33

33:                                               ; preds = %30, %16
  store i32 0, i32* %5, align 4
  br label %34

34:                                               ; preds = %33, %29
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i32* @d2i_PrivateKey(i32, i32*, i8**, i64) #1

declare dso_local i32 @SSL_DEBUG(i32, i8*, ...) #1

declare dso_local i32 @SSL_use_PrivateKey(i32*, i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
